Change project name.

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -2,9 +2,9 @@ doctype html
 
 html
   head
-    title StreamSync v#{version}
+    title CGRO v#{version}
   body
-    h1 StreamSync v#{version}
+    h1 Compton Gamma Ray Observatory v#{version}
     video#player-element(controls)
       source(src="http://iss.lannysport.net/heap/smush.mp4" type="video/mp4")
       p Video playback is not supported by your browser
