--- a/templates/index.pug
+++ b/templates/index.pug
@@ -3,14 +3,17 @@ doctype html
 html
   head
     title CGRO v#{version}
+    link(rel="stylesheet" href="/static/css/style.css")
   body
     h1 Compton Gamma Ray Observatory v#{version}
-    video#player-element(controls)
-      source(src="http://iss.lannysport.net/heap/smush.mp4" type="video/mp4")
-      p Video playback is not supported by your browser
+    .main-video-container
+      video#player-element
+        source(src="http://iss.lannysport.net/heap/southern-charm/Southern.Charm.S01E02.Shepic.Fail.720p.BRAV.WEBRip.AAC2.0.x264.mp4" type="video/mp4")
+        // 
+        p Video playback is not supported by your browser
 
     button#cgro-play Play
     button#cgro-pause Pause
 
     script(src="/socket.io/socket.io.js")
-    script(src="/static/client.js")
+    script(src="/static/js/client.js")
