--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,9 +1,46 @@
+html {
+  background-color: #272727;
+}
+
 .main-video-container {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
+.player-container {
+  overflow: hidden;
+
+  border-width: 1px;
+  border-radius: 4px;
+  border-style: solid;
+  border-top-color: #b9b9b9;
+  border-left-color: #b9b9b9;
+  border-right-color: #797979;
+  border-bottom-color: #797979;
+}
+
 #player-element {
   max-width: 100%;
+  display: block;
 }
+
+.player-controls {
+  background-color: #2d373a;
+}
+
+.player-controls button {
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+}
+
+.play-pause {
+  padding: 6px 13px;
+}
+
+.play-pause img {
+  width: 15px;
+  height: 15px;
+}
+
