--- a/templates/index.pug
+++ b/templates/index.pug
@@ -9,7 +9,7 @@ html
     h1#CGRO-header Compton Gamma Ray Observatory v#{version}
     .main-video-container
       .player-container
-        video#player-element
+        video#player-element(data-bind="click: togglePlayState")
           source(src="http://iss.lannysport.net/heap/southern-charm/Southern.Charm.S01E04.Is.She.or.Isnt.She.720p.BRAV.WEBRip.AAC2.0.x264.mp4" type="video/mp4")
           p Video playback is not supported by your browser
         .player-controls
