--- a/templates/index.pug
+++ b/templates/index.pug
@@ -4,11 +4,14 @@ html
   head
     title CGRO v#{version}
     link(rel="stylesheet" href="/static/vendor/normalize.css")
-    link(rel="stylesheet" href="/static/css/style.css")
-  body
+    link(rel="stylesheet" href="/static/css/styles.css")
+  body(data-bind="event: {mousemove: onMouseMove, mouseup: onMouseUp}")
+    .subwindows(data-bind="foreach: subwindows")
+      div(data-bind="template: {name: 'faux-window-template', data: $data}")
+
     h1#CGRO-header Compton Gamma Ray Observatory v#{version}
     .main-video-container
-      .player-container
+      .player-container(data-bind="using: playerVM")
         video#player-element(data-bind="click: togglePlayState")
           source(data-bind="attr: {src: videoSrc}" type="video/mp4")
           p Video playback is not supported by your browser
@@ -19,7 +22,12 @@ html
             span.current-time(data-bind="text: currentTime")
             span &nbsp;/&nbsp;
             span.duration(data-bind="text: duration")
-          
+
+    script#faux-window-template(type="text/html")
+      include includes/faux-window-template.pug
+
+    script#prompt-template(type="text/html")
+      include includes/prompt-template.pug
 
     script(src="/socket.io/socket.io.js")
     script(src="/static/vendor/knockout-3.5.0.js")
