Added functional but not pretty change source dialog.

--- a/client/less/styles.less
+++ b/client/less/styles.less
@@ -63,16 +63,17 @@ body {
       -webkit-appearance: none;
       border: none;
       background: none;
-    }
-
-    .play-pause {
       padding: 6px 13px;
       cursor: pointer;
+
+      img {
+        width: 15px;
+        height: 15px;
+      }
     }
 
-    .play-pause img {
-      width: 15px;
-      height: 15px;
+    .spacer {
+      flex: 1
     }
   }
 }
