Scale player down when viewport is less tall than native video resolution.

--- a/client/less/styles.less
+++ b/client/less/styles.less
@@ -82,6 +82,7 @@ input[type="text"] {
 
   #player-element {
     max-width: 100%;
+    max-height: calc(100vh - 32px);
     display: block;
     cursor: pointer;
   }
