--- a/client/less/styles.less
+++ b/client/less/styles.less
@@ -5,6 +5,7 @@
 @seperator-color: #444240;
 @input-border-radius: 2px;
 @player-fg-color: #7b868a;
+@close-red: #fb3d3f;
 
 .window-border() {
   overflow: hidden;
@@ -140,6 +141,17 @@ input[type="text"] {
     border-bottom: 1px solid #000;
     padding: 5px 10px;
     display: flex;
+
+    .close {
+      width: 12px;
+      height: 12px;
+      background-color: @close-red;
+      border: none;
+      border-radius: 51px;
+      padding: 0;
+      cursor: pointer;
+      -webkit-appearance: none;
+    }
 
     .title {
       flex: 1;
