--- a/templates/includes/faux-window-template.pug
+++ b/templates/includes/faux-window-template.pug
@@ -11,5 +11,6 @@
     event: { mousedown: fwStartDrag },
     style: {cursor: fwDragging() ? 'grabbing' : 'grab' }
   `)
+    button.close(data-bind="click: fwClose")
     .title(data-bind="text: fwTitle")
   .content(data-bind="template: {name: fwTemplateName, data: $data}")
