--- a/templates/includes/faux-window-template.pug
+++ b/templates/includes/faux-window-template.pug
@@ -13,4 +13,8 @@
   `)
     button.close(data-bind="click: fwClose")
     .title(data-bind="text: fwTitle")
-  .content(data-bind="template: {name: fwTemplateName, data: $data}")
+  .content(data-bind=`template: {
+    name: fwTemplateName,
+    data: $data,
+    afterRender: () => $data.afterRender()
+  }`)
