--- a/templates/includes/prompt-template.pug
+++ b/templates/includes/prompt-template.pug
@@ -1,6 +1,6 @@
 .prompt-container
   .query-line(data-bind="text: query")
   form.response-container(action="#" data-bind="submit: onSubmit")
-    input(type="text" data-bind="value: response")
+    input(type="text" data-bind="value: response, hasFocus: inputHasFocus")
     input(type="submit" value="Go")
 
