--- a/client/less/styles.less
+++ b/client/less/styles.less
@@ -286,3 +286,11 @@ input[type="text"] {
     }
   }
 }
+
+.settings-container {
+  padding: 5px;
+
+  input[type="checkbox"] {
+    margin-right: 10px;
+  }
+}
