--- a/templates/includes/faux-window-template.pug
+++ b/templates/includes/faux-window-template.pug
@@ -4,9 +4,9 @@
       left: fwX,
       width: fwWidth,
       height: fwHeight,
-      'z-index': $index() + 100,
+      'z-index': 100 - windowOrder(),
     },
-    event: { keydown: onKeyDown }
+    event: { keydown: onKeyDown, focusin: () => $data.onFocusIn() }
   `)
   .title-bar(data-bind=`
     event: { mousedown: fwStartDrag },
