--- a/client/less/styles.less
+++ b/client/less/styles.less
@@ -204,6 +204,10 @@ input[type="text"] {
   font-size: 11px;
   .window-border();
 
+  &.has-focus {
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.7);
+  }
+
   > .title-bar {
     background-color: @titlebg;
     border-bottom: 1px solid #000;
